--- a/index.html
+++ b/index.html
@@ -69,9 +69,8 @@
         </pre>
     </div>
 
-    <!-- New text block -->
     <div class="text-block">
-        <p>This is a new text block.</p>
+        <p style="color: rgba(0, 140, 255, 0.466);">This government server contains highly classified UFO data. Unauthorized access is strictly prohibited.</p>
     </div>
 
     <div class="prompt">root@blackmage:~$</div>
