--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
             margin-left: 4px;
         }
 
+        .text-block {
+            color: #ff0;
+        }
+
+        .command-output {
+            color: #0f0;
+            margin-top: 10px;
+        }
+
         @keyframes blink {
             0% {
                 opacity: 1;
@@ -69,13 +78,36 @@
         </pre>
     </div>
 
+    <!-- Updated text block -->
     <div class="text-block">
-        <p style="color: rgba(0, 140, 255, 0.466);">This government server contains highly classified UFO data. Unauthorized access is strictly prohibited.</p>
+        <p style="color: #ff0;">This government server contains highly classified UFO data. Unauthorized access is strictly prohibited.</p>
     </div>
 
     <div class="prompt">root@blackmage:~$</div>
     <div class="cursor-container">
         <div class="cursor"></div>
     </div>
+
+    <!-- Command input and output -->
+    <input type="text" id="command-input" />
+    <div id="output-container"></div>
+
+    <script>
+        const commandInput = document.getElementById('command-input');
+        const outputContainer = document.getElementById('output-container');
+
+        commandInput.addEventListener('keydown', function(event) {
+            if (event.key === 'Enter') {
+                event.preventDefault();
+                const command = commandInput.value;
+                commandInput.value = '';
+
+                const output = document.createElement('div');
+                output.className = 'command-output';
+                output.textContent = command;
+                outputContainer.appendChild(output);
+            }
+        });
+    </script>
 </body>
 </html>
