text box styling

--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
             margin-top: 10px;
         }
 
+        input[type="text"] {
+            background-color: #000;
+            color: #ff0;
+            border: none;
+            padding: 5px;
+            margin-top: 10px;
+        }
+
         @keyframes blink {
             0% {
                 opacity: 1;
