--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     <!-- Updated text block -->
     <div class="text-block">
-        <p style="color: #ff0;">This government server contains highly classified UFO data. Unauthorized access is strictly prohibited.</p>
+        <p style="color: rgba(0, 132, 255, 0.418);">This government server contains highly classified UFO data. Unauthorized access is strictly prohibited.</p>
     </div>
 
     <div class="prompt">root@blackmage:~$</div>
