--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             background-color: #000;
             color: #ff0;
             border: none;
+            outline: none; /* Add this line to remove the outline */
             padding: 5px;
             margin-top: 10px;
         }
@@ -117,5 +118,4 @@
             }
         });
     </script>
-</body>
-</html>
+</
