--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
             background-color: #000;
             color: #ff0;
             border: none;
-            outline: none; /* Add this line to remove the outline */
+            outline: none;
             padding: 5px;
             margin-top: 10px;
+            box-shadow: none; /* Add this line to remove the box-shadow */
         }
 
         @keyframes blink {
@@ -118,4 +119,5 @@
             }
         });
     </script>
-</
+</body>
+</html>
