--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     <div class="prompt">root@blackmage:~$</div>
     <div class="cursor-container">
-        <div class="cursor"></div>
+        <!-- <div class="cursor"></div> --> 
     </div>
 
     <!-- Command input and output -->
