--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
             font-weight: bold;
         }
 
+        input[type="text"] {
+            background-color: #000;
+            border: none;
+            outline: none;
+        }
+
         @keyframes blink {
             0% {
                 opacity: 1;
