--- a/index.html
+++ b/index.html
@@ -107,12 +107,15 @@
     </div>
 
     <!-- Command input and output -->
-    <input type="text" id="command-input" />
-    <div id="output-container"></div>
+    <div id="command-container">
+        <input type="text" id="command-input" />
+        <div id="output-container"></div>
+    </div>
 
     <script>
         const commandInput = document.getElementById('command-input');
         const outputContainer = document.getElementById('output-container');
+        const commandContainer = document.getElementById('command-container');
 
         commandInput.addEventListener('keydown', function(event) {
             if (event.key === 'Enter') {
@@ -138,6 +141,7 @@ d----        07/06/2023      20:11                <span class="directory-name">ï
                 }
 
                 outputContainer.appendChild(output);
+                commandContainer.scrollIntoView(false);
             }
         });
 
