--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
        <p>
           To get from that to the actual ASCII character code, you take the base character and flip bit 6 (i.e. XOR with 64). For letters, that just means subtract 64. So, for example, <sup>^A</sup> is character code 1 (because A is 65). <sup>^M</sup> is 77 - 64 = 13 (because M is 77), which corresponds to carriage return in ASCII.
        </p>
+        <p> 
+            Set windows style:
+            git config --global core.autocrlf true
+            git config --global core.eol crlf
+        </p>
     </div>
 
     <!-- Updated text block -->
