--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             git commit -m "Drop files from .gitignore"</code>
         </pre>
     </div>
-    <div>
+    <div class="terminal">
        <p>
           <sup>M</sup> represents carriage return. This diff means something removed a Unicode BOM from the beginning of the line and added a CR at the end.
        </p>
