--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
             <code>
           <sup>M</sup> represents carriage return. This diff means something removed a Unicode BOM from the beginning of the line and added a CR at the end.      
           The <sup>^</sup> symbol stands for Control, so <sup>^M</sup> means Ctrl+M.      
-          To get from that to the actual ASCII character code, you take the base character and flip bit 6 (i.e. XOR with 64). For letters, that just means subtract 64. So, for example, <sup>^A</sup> is character code 1 (because A is 65). <sup>^M</sup> is 77 - 64 = 13 (because M is 77), which corresponds to carriage return in ASCII.
+          To get from that to the actual ASCII character code, you take the base character and flip bit 6 (i.e. XOR with 64). 
+          For letters, that just means subtract 64. So, for example, <sup>^A</sup> is character code 1 (because A is 65). 
+          <sup>^M</sup> is 77 - 64 = 13 (because M is 77), which corresponds to carriage return in ASCII.
        
             Set windows style:
             git config --global core.autocrlf true
