--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Static HTML Page</title>
+    <title>Terminal</title>
     <style>
         body {
             background-color: #000;
