--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     d----        07/06/2023      20:11                <span class="directory-name">  secret</span>`;
     
                         output.innerHTML = fileSystemListing;
-                    } else if (command === 'cd secrets') {
+                    } else if (command === 'cd secret') {
                         const secretFilesListing = `
     Directory: /root/hidden/secret/
     
