--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
     </div>
     <div class="terminal">         
         <code>
-          <sup>M</sup> represents carriage return. This diff means something removed a Unicode BOM from the beginning of the line and added a CR at the end.      
+          <sup>M</sup> represents carriage return. This diff means something removed a Unicode BOM from the beginning 
+          of the line and added a CR at the end.      
           The <sup>^</sup> symbol stands for Control, so <sup>^M</sup> means Ctrl+M.      
           To get from that to the actual ASCII character code, you take the base character and flip bit 6 (i.e. XOR with 64). 
           For letters, that just means subtract 64. So, for example, <sup>^A</sup> is character code 1 (because A is 65). 
