--- a/index.html
+++ b/index.html
@@ -43,16 +43,17 @@
 
         .prompt {
             color: #ff0;
-            display: inline-block;
-            float: left;
-            clear: both;
-            margin-top: 10px;
+            color: #ff0;
+            font-size: 14px; /* Adjust the font size as needed */
+            margin-bottom: 0; /* Remove the margin bottom */
+            margin-top: 3px; /* Adjust the margin top as needed */
         }
 
         .cursor-container {
             position: relative;
             display: inline-block;
             float: left;
+            margin-top: 3px; /* Adjust the margin top as needed */
             margin-top: 10px;
         }
 
