--- a/index.html
+++ b/index.html
@@ -44,16 +44,14 @@
         .prompt {
             color: #ff0;
             font-size: 14px; /* Adjust the font size as needed */
-            margin-bottom: 0; /* Remove the margin bottom */
-            margin-top: 3px; /* Adjust the margin top as needed */
+            display: inline-block; /* Add display property */
+            margin-top: 0; /* Remove the margin top */
         }
 
         .cursor-container {
-            position: relative;
-            display: inline-block;
-            float: left;
-            margin-top: 3px; /* Adjust the margin top as needed */
-            margin-top: 10px;
+            margin-top: 0; /* Remove the margin top */
+            display: inline-block; /* Add display property */
+            vertical-align: middle; /* Align vertically to middle */
         }
 
         .cursor {
