--- a/index.html
+++ b/index.html
@@ -43,15 +43,17 @@
 
         .prompt {
             color: #ff0;
-            font-size: 14px; /* Adjust the font size as needed */
-            display: inline-block; /* Add display property */
-            margin-top: 0; /* Remove the margin top */
+            display: inline-block;
+            float: left;
+            clear: both;
+            margin-top: 10px;
         }
 
         .cursor-container {
-            margin-top: 0; /* Remove the margin top */
-            display: inline-block; /* Add display property */
-            vertical-align: middle; /* Align vertically to middle */
+            position: relative;
+            display: inline-block;
+            float: left;
+            margin-top: 10px;
         }
 
         .cursor {
