--- a/index.html
+++ b/index.html
@@ -91,6 +91,15 @@
             outline: none;
         }
 
+        #ascii-container {
+        text-align: center;
+        margin-top: 20px; /* Adjust the margin top as needed */
+        }
+
+        .ascii-art {
+            color: yellow; /* Set the color to yellow */
+        }
+
         @keyframes blink {
             0% {
                 opacity: 1;
@@ -140,6 +149,35 @@
         </code>          
     </div>
 
+    <div id="ascii-container">
+        <pre class="ascii-art">
+            .     .       .  .   . .   .   . .    +  .
+              .     .  :     .    .. :. .___---------___.
+                   .  .   .    .  :.:. _".^ .^ ^.  '.. :"-_. .
+                .  :       .  .  .:../:            . .^  :.:\.
+                    .   . :: +. :.:/: .   .    .        . . .:\
+             .  :    .     . _ :::/:               .  ^ .  . .:\
+              .. . .   . - : :.:./.                        .  .:\
+              .      .     . :..|:                    .  .  ^. .:|
+                .       . : : ..||        .                . . !:|
+              .     . . . ::. ::\(                           . :)/
+             .   .     : . : .:.|. ######              .#######::|
+              :.. .  :-  : .:  ::|.###=###           ..###=####:|
+             .  .  .  ..  .  .. :\ ##=##=##          :##=##=## :/
+              .        .+ :: : -.:\ ###=####       . ####=###.:/
+                .  .+   . . . . :.:\. #######       #######..:/
+                  :: . . . . ::.:..:.\           .   .   ..:/
+               .   .   .  .. :  -::::.\.       | |     . .:/
+                  .  :  .  .  .-:.":.::.\             ..:/
+             .      -.   . . . .: .:::.:.\.           .:/
+            .   .     : . : .:.:::.: .:.:.:\   .__.   :/
+               .   .  .   .:. .. .  .: :.:.:\       :/
+                 +   .   .   : . ::. :.:. .:.|\  .:/|
+                 .         +   .  .  ...:: ..|  --.:|
+            .      . . .   .  .  . ... :..:.."(   ..)"
+             .   .       .      :  .   .: ::/  .  .::\
+        </pre>
+    </div>
 
     <!-- Updated text block -->
     <div class="text-block">
