--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         }
 
         .directory-name {
-            color: #0f0;
+            color: #ff0;
             font-weight: bold;
         }
 
@@ -89,10 +89,11 @@
             color: #ff0;
             border: none;
             outline: none;
+            padding-top: 10px;
         }
 
         #ascii-container {
-        text-align: center;
+        text-align: left;
         margin-top: 20px; /* Adjust the margin top as needed */
         }
 
