--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         }
 
         .command-output {
-            color: #0f0;
+            color: #ff0;
             margin-top: 10px;
             white-space: pre;
         }
