--- a/index.html
+++ b/index.html
@@ -149,6 +149,16 @@
             git reset --soft HEAD^^
         </code>          
     </div>
+    <div class="terminal"> 
+        <h2>Origin</h1>            
+        <code>
+            # Get list of locations
+            git remote -v
+
+            # Change the Origin
+            git remote set-url origin https://git-repo/new-repository.git
+        </code>          
+    </div>
 
     <div id="ascii-container">
         <pre class="ascii-art">
