--- a/index.html
+++ b/index.html
@@ -2,122 +2,12 @@
 <html>
 <head>
     <title>Terminal</title>
-    <style>
-        body {
-            background-color: #000;
-            color: #fff;
-            font-family: "Courier New", Courier, monospace;
-            padding: 20px;
-        }
-
-        h1 {
-            color: #ff0;
-            font-size: 24px;
-            margin-bottom: 10px;
-        }
-
-        .terminal {
-            background-color: #000;           
-            border: 1px solid #ff0;
-            white-space: pre-wrap;
-            overflow: auto;
-            position: relative;
-        }
-
-        .terminal pre {
-        margin: 0;
-        }
-
-        .terminal code {
-            font-family: "Courier New", Courier, monospace;
-        }
-
-        .terminal sup {
-            font-size: 10px;
-            vertical-align: super;
-        }
-
-        .terminal .text-block {
-            color: rgba(0, 132, 255, 0.418);
-        }
-
-        .prompt {
-            color: #ff0;
-            display: inline-block;
-            float: left;
-            clear: both;
-            margin-top: 10px;
-        }
-
-        .cursor-container {
-            position: relative;
-            display: inline-block;
-            float: left;
-            margin-top: 10px;
-        }
-
-        .cursor {
-            animation: blink 0.8s step-end infinite;
-            height: 1em;
-            width: 0;
-            border-right: 2px solid #ff0;
-            margin-left: 4px;
-        }
-
-        .text-block {
-            color: #ff0;
-        }
-
-        .command-output {
-            color: #ff0;
-            margin-top: 10px;
-            white-space: pre;
-        }
-
-        .file-name {
-            color: #ff0;
-            font-weight: bold;
-        }
-
-        .directory-name {
-            color: #ff0;
-            font-weight: bold;
-        }
-
-        #command-input {
-            background-color: #000;
-            color: #ff0;
-            border: none;
-            outline: none;
-            padding-top: 10px;
-        }
-
-        #ascii-container {
-        text-align: left;
-        margin-top: 20px; /* Adjust the margin top as needed */
-        }
-
-        .ascii-art {
-            color: yellow; /* Set the color to yellow */
-        }
-
-        @keyframes blink {
-            0% {
-                opacity: 1;
-            }
-            50% {
-                opacity: 0;
-            }
-            100% {
-                opacity: 1;
-            }
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">  
 </head>
 <body>
     
     <div class="terminal">
-        <h2>Clean After forgetting .gitignore</h1>    
+        <h2>Clean After forgetting .gitignore</h2>    
         <code>
             git rm -r --cached .
             git add .
@@ -125,7 +15,7 @@
         </code>     
     </div>
     <div class="terminal"> 
-        <h2>What is the meaning of ^M in 'git diff'?</h1>            
+        <h2>What is the meaning of ^M in 'git diff'?</h2>            
         <code>
           <sup>M</sup> represents carriage return. This diff means something removed a Unicode BOM from the beginning 
           of the line and added a CR at the end.      
@@ -140,7 +30,7 @@
         </code>          
     </div>
     <div class="terminal"> 
-        <h2>Practical uses of git reset --soft?</h1>            
+        <h2>Practical uses of git reset --soft?</h2>            
         <code>
             # Move the HEAD, and just the HEAD, one commit back!
             git reset --soft HEAD^
@@ -150,7 +40,7 @@
         </code>          
     </div>
     <div class="terminal"> 
-        <h2>Origin</h1>            
+        <h2>Origin</h2>            
         <code>
             # Get list of locations
             git remote -v
