--- a/index.html
+++ b/index.html
@@ -137,7 +137,11 @@ Mode         LastWriteTime             Length    Name
 -a---        07/06/2023      21:30     564KB     topsecret_materials.pdf
 -a---        07/06/2023      21:32     1.2MB     ufo_photo.png
 -a---        07/06/2023      21:35     876KB     secret_photo.jpg
--a---        07/06/2023      21:38     2.3MB     confidential_report.docx`;
+-a---        07/06/2023      21:38     2.3MB     confidential_report.docx
+-a---        07/06/2023      23:33     0.1MB     readme.txt
+
+`;
+                        
 
                         output.innerHTML = secretFilesListing;
                     } else if (command === 'cd pictures') {
@@ -149,10 +153,26 @@ Mode         LastWriteTime             Length     Name
 -a---        07/06/2023      22:00     1.5MB     alien_world.jpg
 -a---        07/06/2023      22:05     1.8MB     david_grush_hidden.png
 -a---        07/06/2023      22:10     2.1MB     whistleblower.jpg
--a---        07/06/2023      22:15     2.5MB     proxima_prof.png`;
+-a---        07/06/2023      22:15     2.5MB     proxima_prof.png
+-a---        07/06/2023      23:33     0.1MB     readme.txt
+`;
 
                         output.innerHTML = picturesListing;
-                    } else if (command === 'ifconfig' || command === 'ipconfig') {
+                    }                    
+                    else if (command === 'cat readme.txt') {
+                        const readmeContent = `
+  This is the readme file for the deep secrets. 
+
+  All the files listed in this directory are highly confidential and are not meant to be shared outside the organisation.
+
+  Please, handle the files with care.
+  
+  To open a file use the command 'open <filename>'.
+  `;
+
+                        output.innerHTML = readmeContent;
+                    }                     
+                    else if (command === 'ifconfig' || command === 'ipconfig') {
                         const ipInfo = `
     Windows IP Configuration
     
