--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
         </code>
     </div>
     <div class="terminal">
+        <h2>Reset changes to origin</h2>
+        <code>
+            git fetch origin
+            git reset --hard origin/master
+        </code>
+    </div>
+    <div class="terminal">
         <h2>What is the meaning of ^M in 'git diff'?</h2>
         <code>
             <sup>M</sup> represents carriage return. This diff means something removed a Unicode BOM from the beginning
