--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div id="alienBlock" style="display: block;">
             <div id="ascii-container">
                 <pre class="ascii-art">
-                    .     .       .  .   . .   .   . .    +  .
+                    .     .       .  .   . .   .   . .    +  . 
                       .     .  :     .    .. :. .___---------___.
                            .  .   .    .  :.:. _".^ .^ ^.  '.. :"-_. .
                         .  :       .  .  .:../:            . .^  :.:\.
@@ -154,6 +154,6 @@
                 git remote set-url origin https://git-repo/new-repository.git
             </code>
         </div>
-        <script src="terminalScript.js"></script>
+        <script type="module"  src="terminalScript.js"></script>
     </body>
 </html>
