--- a/index.html
+++ b/index.html
@@ -154,6 +154,27 @@
                 git remote set-url origin https://git-repo/new-repository.git
             </code>
         </div>
+        <div class="terminal">
+            <h2>Delta</h2>
+            <code>
+                Install:
+                  winget install dandavison.delta
+                Config:
+                  git config --global core.pager delta
+            </code>
+        </div>
+        <div class="terminal">
+            <h2>Patch</h2>
+            <code>                
+                cmd:
+                  git add --patch
+                  s -> splitt
+                  y -> stage hunk
+                  n -> not stage hunk
+                  git diff --staged for the y                
+            </code>
+        </div>
+
         <script src="terminalScript.js"></script>
     </body>
 </html>
