--- a/index.html
+++ b/index.html
@@ -174,6 +174,14 @@
                   git diff --staged for the y                
             </code>
         </div>
+        <div class="terminal">
+            <h2>search commits</h2>
+            <code>                
+                cmd:
+                 git lg -S 'Searchtearm' 
+                 git lg -L:functionName:src/file.cs          
+            </code>
+        </div>
 
         <script src="terminalScript.js"></script>
     </body>
