--- a/index.html
+++ b/index.html
@@ -146,6 +146,13 @@
                 <span class="command">git remote set-url origin https://git-repo/new-repository.git</span>
             </code>
         </div>
+        <div class="terminal">
+            <h2>Origin</h2>
+            <code>
+                <span class="command"># history path for powershell</span>
+                <span class="command">(Get-PSReadlineOption).HistorySavePath</span>
+            </code>
+        </div>
         <script type="module"  src="terminalScript.js"></script>
     </body>
 </html>
